<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E6E5E5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/registratio"
        android:layout_width="237dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAppearance="@style/registratio"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:id="@+id/ellipse_5_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/ellipise_5_in_login" />

    <View
        android:id="@+id/ellipse_4_login"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="151dp"
        android:background="@drawable/ellipse_4_in_login" />

    <View
        android:id="@+id/ellipse_6_login"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/ellipse_6_in_login" />

    <View
        android:id="@+id/logo1_1_login"
        android:layout_width="390dp"
        android:layout_height="415dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="215dp"
        android:background="@drawable/logo1_1_register" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="273dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/user_name_e" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="352dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Button_Login"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="446dp"
        android:background="@drawable/rectangle_8_login_button"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView_Register"
        android:layout_width="247dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:text="@string/new_registr"
        android:textColor="#650505"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/back_login"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="680dp"
        android:gravity="top"
        android:text="@string/back"
        android:textAppearance="@style/back" />
    <TextView
        android:id="@+id/skip_login"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="680dp"
        android:gravity="top"
        android:text="@string/skip"
        android:textAppearance="@style/back" />
</RelativeLayout>